@@ -4,6 +4,9 @@
 #include <stdio.h>
 #include "rmn_calc.h"
 
+// comment out when not testing
+#define RMN_CALC_TEST
+
 typedef unsigned char byte;
 
 #endif // COMMON.h
