@@ -1,4 +1,7 @@
 #ifndef RMN_CALC_H
 #define RMN_CALC_H
 
-#endif RMN_CALC_H
+int RMN_init(void);
+int RMN_verify_string(char *str);
+
+#endif // RMN_CALC_H
