@@ -1,4 +1,6 @@
 #ifndef TEST_RMN_CALC_H
 #define TEST_RMN_CALC_H
 
+void TEST_rmn_calc_test(void);
+
 #endif // TEST_RMN_CALC_H
